[package]
name = "untitled-image-viewer"
version = "0.1.0"
edition = "2024"

[profile.release] # for perf
debug = true
opt-level = 3
strip = false

[dependencies]
anyhow = "1.0.99"
bytemuck = { version = "1.23.2", features = ["derive"] }
clap = { version = "4.5.46", features = ["derive"] }
crossbeam-channel = "0.5.15"
image = { version = "0.25.6", features = ["avif-native"] }
itertools = "0.14.0"
lcms2 = "6.1.1"
lexical-sort = "0.3.1"
pollster = "0.4.0"
wgpu = "26.0.1"
winit = "0.30.12"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.37.2"
